// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PipelineErrorDialog /> should render with minimal props 1`] = `
<BasicDialog
  actions={Array []}
  title="modal.title_error"
>
  <div
    aria-hidden={true}
    onClick={[Function]}
  >
    <Translate
      className=""
      params={Object {}}
      string="modal.body_error"
    />
  </div>
</BasicDialog>
`;

exports[`<PipelineErrorDialog /> should show a custom message if a message is is provided 1`] = `
<BasicDialog
  actions={Array []}
  title="modal.title_error"
>
  <div
    aria-hidden={true}
    onClick={[Function]}
  >
    <Translate
      className=""
      params={Object {}}
      string="Custom message"
    />
  </div>
</BasicDialog>
`;
